# stem-cell-shrank

./: .env.example  .gitattributes  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  Dockerfile  README.md
crates/resource-model-macro/: Cargo.toml  LICENSE  README.md
crates/resource-model-macro/src/: codegen.rs  spec.rs  validate.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/specs/: systems.yaml
crates/runtime/src/: integrations.rs  lib.rs  main.rs  migrate_auth.rs  proxy.rs
crates/runtime/src/auth/: config.rs  middleware.rs  mod.rs  models.rs  oauth.rs  password.rs  repository.rs  routes.rs
crates/runtime/src/email/: mod.rs  templates.rs
crates/runtime/src/systems/: cleanup_deployments.rs  mod.rs  run_build.rs  spawn_environment.rs
crates/runtime/tests/contracts/: ai_provider_integration.rs  cleanup_deployments.rs  hosting_provider_integration.rs  main.rs  payment_provider_integration.rs  run_build.rs
crates/system-model-macro/: Cargo.toml
crates/system-model-macro/src/: codegen.rs  lib.rs  spec.rs  validate.rs
crates/systems-codegen/src/: main.rs
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/components/: HeroPrompt.tsx  ProjectView.tsx
frontend/src/components/ui/: ai-prompt-box.tsx
frontend/src/layouts/: Base.astro
frontend/src/pages/: categories.astro  clients.astro  comments.astro  contracts.astro  departments.astro  forgot-password.astro  index.astro  invoices.astro  line_items.astro  login.astro  milestones.astro  organizations.astro  payments.astro  projects.astro  register.astro  reset-password.astro  roles.astro  sprints.astro  tasks.astro  time_entries.astro  users.astro
frontend/src/pages/admin/: artifacts.astro  build_jobs.astro  conversations.astro  deployments.astro  index.astro  markets.astro  memberships.astro  messages.astro  organizations.astro  outcomes.astro  plans.astro  positions.astro  projects.astro  subscriptions.astro  usage_records.astro  users.astro
frontend/src/pages/admin/systems/: assign_task.astro  cleanup_deployments.astro  close_sprint.astro  create_market.astro  create_project.astro  deploy_project.astro  invite_member.astro  log_billable_time.astro  place_trade.astro  record_invoice_payment.astro  remove_comment.astro  run_build.astro  send_message.astro  upgrade_subscription.astro
frontend/src/pages/markets/: [slug].astro  new.astro
frontend/src/pages/project/: index.astro
resource-model-macro/: Cargo.toml
resource-model-macro/src/: codegen.rs  lib.rs  spec.rs  validate.rs
specs/: self.yaml  systems.yaml
src/: main.rs
