[workspace]
members = ["resource-model-macro"]

[package]
name = "stem-cell"
version = "0.1.0"
edition = "2024"

[dependencies]
resource-model-macro = { path = "resource-model-macro" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
