[package]
name = "stem-cell"
version = "0.1.0"
edition = "2024"

[dependencies]
resource-model-macro = { path = "../../crates/resource-model-macro" }
system-model-macro = { path = "../../crates/system-model-macro" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "rust_decimal",
] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "request-id"] }
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
argon2 = "0.5"
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.9"
base64 = "0.22"
thiserror = "2"
time = "0.3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
